# Simulator_Interpreter

./: AssignVarCommand.cpp  AssignVarCommand.h  CMakeLists.txt  Command.h  Condition.cpp  Condition.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DataBase.cpp  DataBase.h  DefineVarCommand.cpp  DefineVarCommand.h  Expression.h  IfCommand.cpp  IfCommand.h  Interpreter.cpp  Interpreter.h  LICENSE  Lexer.cpp  Lexer.h  Math.cpp  Math.h  MathInterpreter.cpp  MathInterpreter.h  OpenDataServerCommand.cpp  OpenDataServerCommand.h  PrintCommand.cpp  PrintCommand.h  README.md  RunProgramm.cpp  RunProgramm.h  SleepCommand.cpp  SleepCommand.h  WhileCommand.cpp  WhileCommand.h  command.h  connect_command.cpp  connect_command.h  (+10 more)
